--- a/registration.html
+++ b/registration.html
@@ -172,6 +172,6 @@
       }
     }
   </script>
- Already have an account? <a href="L.html"> login </a>   
+ Already have an account? <a href="login.html"> login </a>   
 </body>
 </html>
